Changes to structure

--- a/main/index.html
+++ b/main/index.html
@@ -16,18 +16,34 @@
     </header>
     <hero>
         <img src="/images/hero_elite_barber_shop.png" alt="Elite Barber">
-    </hero>
-    <hero>
-        <img src="/images/hero_elite_barber_shop.png" alt="Elite Barber">
-    </hero>
-    <hero>
-        <img src="/images/hero_elite_barber_shop.png" alt="Elite Barber">
-    </hero>
-    <hero>
-        <img src="/images/hero_elite_barber_shop.png" alt="Elite Barber">
+        <section class="about_us_section">
+            <h2>About Us</h2>
+            <p>Welcome to Elite Barber, where style meets precision. Our team of skilled barbers is dedicated to providing you with the best grooming experience. Whether you're looking for a classic cut or a modern style, we've got you covered.</p>
+        </section>
     </hero>
     <main>
-        <p>Welcome to Elite Barber Demo</p>
+        <section class="pictures_section">
+            <h2>Our Work</h2>
+            <div class="gallery">
+                <img src="/images/haircut1.jpg" alt="Haircut 1">
+                <img src="/images/haircut2.jpg" alt="Haircut 2">
+                <img src="/images/haircut3.jpg" alt="Haircut 3">
+            </div>
+        </section>
+        <section class="prices_section">
+            <h2>Prices</h2>
+            <ul>
+                <li>Haircut: $25</li>
+                <li>Beard Trim: $15</li>
+                <li>Shave: $20</li>
+                <li>Combo (Haircut + Beard Trim): $35</li>
+            </ul>
+        </section>
+        <section class="location_section">
+            <h2>Location</h2>
+            <p>123 Barber Street, Style City, ST 45678</p>
+            <p>Open: Mon-Sat 9am - 7pm, Sun 10am - 5pm</p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Elite Barber. All rights reserved.</p>
