Implemented About Us & and Our Team section. !! BUG on the sizing of the barbers cards.

--- a/main/index.html
+++ b/main/index.html
@@ -8,20 +8,38 @@
 </head>
 <body>
     <header>
-            <button class="about_us">About Us</button>
-            <button class="pictures">Pictures</button>
-            <h1>Elite Barber</h1>
-            <button class="prices">Prices</button>
-            <button class="location">Location</button>
+        <button class="about_us">About Us</button>
+        <button class="pictures">Pictures</button>
+        <h1>Elite Barber</h1>
+        <button class="prices">Prices</button>
+        <button class="location">Location</button>
     </header>
     <hero>
         <img src="/images/hero_elite_barber_shop.png" alt="Elite Barber">
-        <section class="about_us_section">
-            <h2>About Us</h2>
-            <p>Welcome to Elite Barber, where style meets precision. Our team of skilled barbers is dedicated to providing you with the best grooming experience. Whether you're looking for a classic cut or a modern style, we've got you covered.</p>
-        </section>
     </hero>
     <main>
+        <section class="about_us_section">
+            <h2>About Us</h2>
+            <p>Welcome to Elite Barber, where style meets precision. 
+                Our team of skilled barbers is dedicated to providing you with 
+                the best grooming experience. Whether you're looking for a classic 
+                cut or a modern style, we've got you covered.</p>
+            <h2>Our Team</h2>
+            <div class="barbers">
+                <div class="barber_1">
+                    <img src="/images/john_doe.jpg" alt="John Doe">
+                    <p>John Doe - Master Barber with 20 years of experience</p>
+                </div>
+                <div class="barber_2">
+                    <img src="/images/jane_smith.jpg" alt="Jane Smith">
+                    <p>Jane Smith - Expert in modern styles and fades</p>
+                </div>
+                <div class="barber_3">
+                    <img src="/images/mike_johnson.jpg" alt="Mike Johnson">
+                    <p>Mike Johnson - Specializes in classic cuts and shaves</p>
+                </div>
+            </div>
+        </section>
         <section class="pictures_section">
             <h2>Our Work</h2>
             <div class="gallery">
@@ -46,7 +64,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Elite Barber. All rights reserved.</p>
+        <p>&copy; 2026 Elite Barber. All rights reserved.</p>
     </footer>
 </body>
 </html>
